# vacs

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  Cargo.toml  README.md  SECURITY.md  deny.toml  release-please-config.json  renovate.json
.github/: dependabot.yml
.github/workflows/: ci-node.yml  ci-rust.yml  release-client.yml  release-please.yml  release-server.yml  server.yml
src/: main.rs
src/audio/: mod.rs
vacs-audio/: CHANGELOG.md  Cargo.toml
vacs-audio/src/: device.rs  dsp.rs  error.rs  lib.rs  output.rs
vacs-audio/src/sources/: opus.rs
vacs-audio/src/stream/: capture.rs  playback.rs
vacs-client/: CHANGELOG.md  Cargo.toml  Entitlements.plist  Info.plist  package-lock.json  package.json  tauri.conf.json  tauri.linux.conf.json
vacs-client/capabilities/: default.json
vacs-client/docs/config/: README.md  client.md  config.schema.json  stations.md
vacs-client/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
vacs-client/frontend/src/: App.css  App.tsx  error.ts  main.css  main.tsx
vacs-client/frontend/src/components/: AudioHostSelector.tsx  CallList.tsx  CallQueue.tsx  Clock.tsx  DAKeyArea.tsx  DeviceSelector.tsx  DialPad.tsx  ErrorOverlay.tsx  FunctionKeys.tsx  InfoGrid.tsx  TransmitModeSettings.tsx  UpdateOverlay.tsx  VolumeSettings.tsx  call-list.tsx  clock.tsx  info-grid.tsx  main-area.tsx  top-button-row.tsx
vacs-client/frontend/src/components/settings/: AudioHostSelector.tsx  DeviceSelector.tsx  HotkeysConfigPage.tsx  InputLevelMeter.tsx  KeyCapture.tsx  TransmitModePage.tsx  TransmitModeSettings.tsx  VolumeSettings.tsx  VolumeSlider.tsx
vacs-client/frontend/src/components/telephone/: CallList.tsx  DialPad.tsx  IgnoreList.tsx
vacs-client/frontend/src/components/ui/: Button.tsx  DAKey.tsx  EndButton.tsx  InputLevelMeter.tsx  LinkButton.tsx  List.tsx  PhoneButton.tsx  RadioButton.tsx  Select.tsx  StatusIndicator.tsx  VolumeSlider.tsx  action-button.tsx  button.tsx  incoming-list.tsx  navigation-button.tsx
vacs-client/frontend/src/hooks/: debounce-hook.ts  dial-pad-hook.ts  list-hook.ts  radio-state-hook.ts
vacs-client/frontend/src/listeners/: error-listener.ts  signaling-listener.ts
vacs-client/frontend/src/pages/: LoginPage.tsx  MissionPage.tsx  SettingsPage.tsx  TelephonePage.tsx
vacs-client/frontend/src/stores/: call-list-store.ts  call-store.ts  error-overlay-store.ts  filter-store.ts  signaling-store.ts
vacs-client/frontend/src/styles/: main.css
vacs-client/frontend/src/types/: audio.ts  client-info.ts  keybinds.ts  radio.ts  stations.ts  transmit.ts
vacs-client/src/: app.rs  audio.rs  auth.rs  commands.rs  config.rs  error.rs  keybinds.rs  lib.rs  main.rs  platform.rs  radio.rs  secrets.rs  signaling.rs  state.rs
vacs-client/src/app/: commands.rs  state.rs
vacs-client/src/app/state/: audio.rs  http.rs  keybinds.rs  sealed.rs  signaling.rs  webrtc.rs
vacs-client/src/audio/: commands.rs  manager.rs
vacs-client/src/auth/: commands.rs
vacs-client/src/commands/: app.rs  auth.rs
vacs-client/src/keybinds/: commands.rs  engine.rs  runtime.rs
vacs-client/src/keybinds/runtime/: linux.rs  macos.rs  stub.rs  windows.rs
vacs-client/src/keybinds/runtime/linux/: wayland.rs
vacs-client/src/keybinds/runtime/linux/wayland/: listener.rs
vacs-client/src/keybinds/runtime/macos/: listener.rs
vacs-client/src/keybinds/runtime/windows/: emitter.rs  listener.rs
vacs-client/src/radio/: push_to_talk.rs  track_audio.rs
vacs-client/src/secrets/: cookies.rs
vacs-client/src/signaling/: commands.rs
vacs-core/: Cargo.toml
vacs-core/src/: config.rs  lib.rs  signaling.rs
vacs-core/src/audio/: device.rs  input.rs  output.rs
vacs-core/src/signaling/: client.rs  error.rs  transport.rs
vacs-core/src/signaling/transport/: mock.rs  tokio.rs
vacs-core/src/vatsim/: slurper.rs
vacs-core/src/webrtc/: mod.rs  peer.rs  receiver.rs  sender.rs
vacs-protocol/: CHANGELOG.md  Cargo.toml
vacs-protocol/src/: lib.rs  ws.rs
vacs-server/: Cargo.toml  build.rs
vacs-server/src/: app.rs  auth.rs  build.rs  config.rs  lib.rs  main.rs  release.rs  routes.rs  state.rs  store.rs  test_utils.rs  ws.rs
vacs-server/src/release/: policy.rs
vacs-server/src/routes/: root.rs  ws.rs
vacs-server/src/store/: memory.rs  redis.rs
vacs-server/src/test_utils/: test_app.rs  test_client.rs  ws.rs
vacs-server/src/ws/: application_message.rs  auth.rs  calls.rs  client.rs  handler.rs  message.rs  test_util.rs
vacs-server/tests/: auth.rs  call.rs  client.rs  websocket.rs
vacs-server/tests/common/: mod.rs
vacs-shared/: Cargo.toml
vacs-shared/src/: signaling.rs
vacs-signaling/: Cargo.toml
vacs-signaling/src/: auth.rs  client.rs  error.rs  matcher.rs  test_utils.rs  transport.rs
vacs-signaling/src/auth/: mock.rs
vacs-signaling/src/test_utils/: messages.rs  test_rig.rs
vacs-signaling/src/transport/: mock.rs  tokio.rs
vacs-signaling/tests/: auth.rs  calls.rs
vacs-vatsim/: CHANGELOG.md  Cargo.toml
vacs-vatsim/src/: data_feed.rs  lib.rs  oauth.rs  slurper.rs  user.rs
vacs-vatsim/src/data_feed/: vatsim.rs
vacs-vatsim/src/oauth/: connect.rs  mock.rs
vacs-vatsim/src/user/: connect.rs  mock.rs
vacs-webrtc/: CHANGELOG.md  Cargo.toml
vacs-webrtc/src/: error.rs  lib.rs  peer.rs  receiver.rs  sender.rs
