[workspace]
resolver = "3"
members = [
    "vacs-audio",
    "vacs-client",
    "vacs-macros",
    "vacs-protocol",
    "vacs-server",
    "vacs-signaling",
    "vacs-vatsim",
    "vacs-webrtc"
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
axum-client-ip = "1.1.3"
axum-login = "0.18.0"
base64 = "0.22.1"
biquad = "0.5.0"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
config = "0.15.18"
cookie_store = "0.22.0"
cpal = "0.16.0"
csv = "1.3.1"
dashmap = "6.1.0"
directories = "6.0.0"
futures-util = "0.3.31"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-openssl"] }
log = "0.4.28"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
opus = "0.3.0"
parking_lot = "0.12.5"
pretty_assertions = "1.4.1"
quote = "1.0.41"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "cookies"] }
rfd = { version = "0.15.4", features = ["common-controls-v6"] }
ringbuf = "0.4.8"
rubato = "0.16.2"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
syn = { version = "2.0.106", features = ["full"] }
tauri = "2.8.5"
tauri-build = "2.4.1"
tauri-plugin-deep-link = "2.4.3"
tauri-plugin-log = "2.7.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace.git", rev = "8cf8eeab02efddd4e44e3bba92b33902a8c00956" }
test-log = { version = "0.2.18", features = ["trace"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = "0.7.16"
toml = "0.9.8"
tower-http = "0.6.6"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-redis-store = "0.16.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = { version = "0.1.41", features = ["log"] }
url = "2.5.7"
uuid = { version = "1.17.0", features = ["v4"] }
vacs-audio = { path = "vacs-audio" }
vacs-macros = { path = "vacs-macros" }
vacs-protocol = { path = "vacs-protocol" }
vacs-server = { path = "vacs-server" }
vacs-signaling = { path = "vacs-signaling" }
vacs-vatsim = { path = "vacs-vatsim" }
vacs-webrtc = { path = "vacs-webrtc" }
vergen-git2 = { version = "1.0.7", features = ["build", "cargo", "rustc"] }
webrtc = "0.13.0"
wiremock = "0.6.5"

[workspace.lints]
