[workspace]
resolver = "3"
members = [
    "vacs-audio",
    "vacs-client",
    "vacs-macros",
    "vacs-protocol",
    "vacs-server",
    "vacs-signaling",
    "vacs-vatsim",
    "vacs-webrtc"
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MorpheusXAUT/vacs"
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
# we **NEED** to keep the ashpd version and especially feature flags 100% identical to the ones rfd currently uses,
# otherwise our deep-link IPC suddenly breaks under Linux. Don't ask why. And especially don't ask how long it took to
# figure this out.
ashpd = { version = "0.11.0", default-features = false, features = ["raw_handle"] }
async-trait = "0.1.89"
axum = "0.8.7"
axum-client-ip = "1.1.3"
axum-login = "0.18.0"
axum-prometheus = "0.9.0"
base64 = "0.22.1"
biquad = "0.5.0"
bytes = "1.11.0"
cfg-if = "1.0.4"
chacha20poly1305 = "0.10.1"
config = "0.15.19"
cookie_store = "0.22.0"
cpal = "0.16.0"
csv = "1.4.0"
dashmap = "6.1.0"
futures-util = "0.3.31"
governor = "0.10.2"
jsonwebtoken = "10.2.0"
keyboard-types = { version = "0.8.3", features = ["serde"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-openssl"] }
log = "0.4.29"
lru = "0.16.2"
metrics = "0.24.2"
nonzero_ext = "0.3.0"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
octocrab = "0.48.1"
opus = "0.3.0"
parking_lot = "0.12.5"
pretty_assertions = "1.4.1"
quote = "1.0.42"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "cookies"] }
rfd = { version = "0.16.0", features = ["common-controls-v6"] }
ringbuf = "0.4.8"
rubato = "0.16.2"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
syn = { version = "2.0.111", features = ["full"] }
tauri = "2.9.4"
tauri-build = "2.5.3"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-plugin-prevent-default = "4.0.3"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace.git", rev = "8cf8eeab02efddd4e44e3bba92b33902a8c00956" }
test-log = { version = "0.2.19", features = ["trace"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-util = "0.7.17"
toml = "0.9.8"
tower-http = "0.6.7"
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-redis-store = "0.16.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = { version = "0.1.43", features = ["log"] }
trackaudio = "0.2.1"
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v4"] }
vacs-audio = { path = "vacs-audio" }
vacs-macros = { path = "vacs-macros" }
vacs-protocol = { path = "vacs-protocol", default-features = false }
vacs-server = { path = "vacs-server" }
vacs-signaling = { path = "vacs-signaling" }
vacs-vatsim = { path = "vacs-vatsim" }
vacs-webrtc = { path = "vacs-webrtc" }
vergen-git2 = { version = "1.0.7", features = ["build", "cargo", "rustc"] }
webrtc = "0.14.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading"
] }
wiremock = "0.6.5"

[workspace.lints.clippy]
semicolon-if-nothing-returned = "warn"