[package]
name = "vacs-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vacs_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tokio = { workspace = true }
vacs-protocol = { workspace = true }
vacs-signaling = { workspace = true }
