[package]
name = "vacs-client"
version = "0.1.0"
# version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vacs_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }
vergen-git2 = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cfg-if = { workspace = true }
chacha20poly1305 = { workspace = true }
config = { workspace = true }
cookie_store = { workspace = true }
keyboard-types = { workspace = true }
keyring = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
vacs-audio = { workspace = true }
vacs-macros = { workspace = true }
vacs-signaling = { workspace = true }
vacs-webrtc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }