[package]
name = "vacs-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[features]
audio = ["dep:serde", "dep:cpal", "dep:opus", "dep:tokio", "dep:ringbuf", "dep:bytes"]
webrtc = ["dep:serde", "dep:webrtc", "dep:tokio", "dep:serde"]
signaling = ["dep:serde", "dep:serde_json"]
vatsim = ["dep:reqwest", "dep:csv"]
client = ["audio", "webrtc", "signaling", "vatsim"]
server = ["signaling", "vatsim"]
default = ["signaling"]

[dependencies]
anyhow = "1.0.98"
tracing = { workspace = true }

bytes = { version = "1.10.1", optional = true }
cpal = { version = "0.16.0", optional = true }
opus = { version = "0.3.0", optional = true }
ringbuf = { version = "0.4.8", optional = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
webrtc = { version = "0.13.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
reqwest = { version = "0.12.19", optional = true }
csv = { version = "1.3.1", optional = true }

[lints]
workspace = true
