[package]
name = "vacs-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[features]
audio = ["dep:serde", "dep:cpal", "dep:opus", "dep:tokio", "dep:ringbuf", "dep:bytes"]
webrtc = ["dep:serde", "dep:webrtc", "dep:tokio", "dep:serde"]
signaling = ["dep:serde", "dep:serde_json"]
signaling-client = ["signaling", "dep:tokio-tungstenite"]
vatsim = ["dep:reqwest", "dep:csv", "dep:tokio", "dep:bytes"]
client = ["audio", "webrtc", "signaling", "vatsim", "signaling-client"]
server = ["signaling", "vatsim"]
default = ["signaling"]

[dependencies]
anyhow = "1.0.98"
tracing = { workspace = true }

bytes = { version = "1.10.1", optional = true }
cpal = { version = "0.16.0", optional = true }
opus = { version = "0.3.0", optional = true }
ringbuf = { version = "0.4.8", optional = true }
serde = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
webrtc = { version = "0.13.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
reqwest = { version = "0.12.19", optional = true }
csv = { version = "1.3.1", optional = true }
tokio-tungstenite = { workspace = true, optional = true, features = ["native-tls"] }
futures-util = { workspace = true }
async-trait = "0.1.88"
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock = "0.6.3"
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }
