[package]
name = "vacs-protocol"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["ws", "http"]
ws = []
http = ["http-webrtc"]
http-webrtc = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
