[package]
name = "vacs-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
config = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vacs-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }

[lints]
workspace = true
