[package]
name = "vacs-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
axum-client-ip = { workspace = true }
axum-login = { workspace = true }
bytes = { workspace = true }
config = { workspace = true }
dashmap = { workspace = true }
directories = { workspace = true }
futures-util = { workspace = true }
oauth2 = { workspace = true }
parking_lot = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
vacs-protocol = { workspace = true }
vacs-vatsim = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }

[build-dependencies]
vergen-git2 = { workspace = true }

[lints]
workspace = true
