[package]
name = "vacs-server"
version = "1.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
axum-client-ip = { workspace = true }
axum-login = { workspace = true }
axum-prometheus = { workspace = true }
bytes = { workspace = true }
config = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
governor = { workspace = true }
jsonwebtoken = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
nonzero_ext = { workspace = true }
oauth2 = { workspace = true }
octocrab = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tower-sessions = { workspace = true }
tower-sessions-redis-store = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
vacs-protocol = { workspace = true, features = ["http", "ws"] }
vacs-vatsim = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }

[build-dependencies]
vergen-git2 = { workspace = true }

[lints]
workspace = true
