[package]
name = "vacs-signaling"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
vacs-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true, features = ["unstable"] }
test-log = { workspace = true }
vacs-server = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
