[package]
name = "vacs-webrtc"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vacs-audio = { workspace = true }
webrtc = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
